# plibc

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.in  plibc.lsm.in  plibc.spec.in
contrib/: plibcCheckSrc-printf.grep  plibcCheckSrc.grep  plibcCheckSrc.sh
libltdl/: Makefile  config.h  config.status  configure  libtool  ltdl.c  ltdl.h
libltdl/autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  access.c  atoll.c  chdir.c  chmod.c  choosedir.c  choosefile.c  close.c  creat.c  ctime.c  errno.c  flock.c  fopen.c  fread.c  fstat.c  fsync.c  fwrite.c  gettimeofday.c  gmtime_r.c  hsearch.c  hsearch_r.c  inet_ntop.c  inet_pton.c  intl.c  kill.c  langinfo.c  lsearch.c  lseek.c  mkstemp.c  mmap.c  open.c  opendir.c  path.c  pid.c  pipe.c  plibc.c  printf.c  random.c  read.c  readlink.c  (+23 more)
src/include/: Makefile.am  langinfo.h  plibc.h  plibc_private.h
